=======
CHANGES
=======

3.5.0 (unreleased)
------------------

- Adapted to docutils 0.5 for ReST rendering: get rid of the
  ZopeTranslator class, because docutils changed the way it
  uses translator so previous implementation doesn't work anymore.
  Instead, use publish_parts and join needed parts in the ``render``
  method of the renderer itself.

3.4.0 (2007-10-27)
------------------

- Initial release independent of the main Zope tree.