@@ -1,8 +1,0 @@
-docutils
-zope.app
-zope.component
-zope.configuration
-zope.interface
-zope.schema
-zope.structuredtext
-zope.testing
