@@ -1,1 +1,0 @@
-<include package="zope.app.renderer"/>
